5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1637_1053.log
== TEST (2019-04-07 11:44:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (lower()patrono=cervo)
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (lower()patrono=cervo)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:44:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (.lower()patrono=cervo)
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (.lower()patrono=cervo)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:44:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (lower.()patrono=cervo)
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (lower.()patrono=cervo)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:45:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono.lower()=cervo)
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (patrono.lower()=cervo)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:45:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono=cervo)
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (patrono=cervo)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:45:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono.lower()=cervo):
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (patrono.lower()=cervo):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:45:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono=cervo):
	print("cervo eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 6
    if (patrono=cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:46:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono="cervo")
-- ERROR:
File "XXXX", line 6
    if (patrono="cervo")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:46:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono= input("qual o nome do patrono?")

if (patrono="cervo"):
-- ERROR:
File "XXXX", line 6
    if (patrono="cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:46:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p==cervo)
-- ERROR:
File "XXXX", line 6
    if (p==cervo)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:46:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p=="cervo")
-- ERROR:
File "XXXX", line 6
    if (p=="cervo")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p=="cervo"):
-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p=="cervo"):
	print(p eh patrono do Harry Potter)
-- ERROR:
File "XXXX", line 7
    print(p eh patrono do Harry Potter)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p=="cervo"):
	print(p "eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 7
    print(p "eh patrono do Harry Potter")
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:47:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= input("qual o nome do patrono?")

if (p=="cervo"):
	print("p eh patrono do Harry Potter")
-- OUTPUT:
p eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:48:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent= input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:48:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent= input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	print(ent " eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 7
    print(ent " eh patrono do Harry Potter")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:49:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent= input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	msg= ent "eh patrono do Harry Potter"
else: 
	msg= ent "nao eh patrono do Harry Potter"
print(msg)
-- ERROR:
File "XXXX", line 7
    msg= ent "eh patrono do Harry Potter"
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent = input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	msg= ent + "eh patrono do Harry Potter"
else: 
	msg= ent+ "nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervoeh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:50:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent = input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	msg= ent + " eh patrono do Harry Potter"
else: 
	msg= ent+ " nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:50:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
ent = input("qual o nome do patrono?")

if (ent.lower()=="cervo"):
	msg= ent + " eh patrono do Harry Potter"
else: 
	msg= ent+ " nao eh patrono do Harry Potter"
print(msg)
-- EXECUTION TIME:
0.180746
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
